--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,10 @@ jobs:
           sudo apt-get install -y jq imagemagick curl
       - name: Compose config (debug)
         run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml config
+      - name: Boot backend (smoke)
+        run: ""
+      - name: docker ps (debug)
+        run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml ps
       - name: Boot stack
         run: ""
       - name: Alembic status (debug)
